# wow-addon-manager

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
WoW Addon Manager.app/Contents/: Info.plist
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src/components/: AddonCard.vue  AddonList.vue  SearchBar.vue
src/composables/: useAddons.ts  useAppUpdate.ts
src/types/: addon.ts
