[package]
name = "app"
version = "0.1.0"
description = "WoW Addon Manager"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.6.0"
